force-app/main/default/objects/Opportunity/fields/Delivery_Site__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The destination Location record where the equipment will be delivered.</description>
    <inlineHelpText>Select the client site where the equipment must be delivered. Only sites associated with this opportunity&apos;s account should be proposed. Required when &quot;Is Transport Required&quot; is checked.</inlineHelpText>
    <label>Delivery Site</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Opportunities (Delivery Site)</relationshipLabel>
    <relationshipName>Opportunities_As_Delivery_Site</relationshipName>
    <type>Lookup</type>
</CustomField>