force-app/main/default/objects/Opportunity/fields/Distance_Delivery_Agency_km__c.field-meta.xml
<CustomField>
    <fullName>Distance_Delivery_Agency_km__c</fullName>
    <description>Straight-line distance between the Delivery Site and the Default Agency (in km). Used as a baseline for transport cost calculations and zone/truck selection.</description>
    <formula>IF(
  OR(ISBLANK(Delivery_Site__c), ISBLANK(Default_Agency__c)),
  0,
  ROUND(DISTANCE(Delivery_Site__r.Location, Default_Agency__r.Location, &apos;km&apos;), 2)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Straight-line distance based on GPS coordinates (as the crow flies).</inlineHelpText>
    <label>Distance (Delivery to Agency) (km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>