force-app/main/default/objects/Opportunity/fields/Distance_Driving_Route_km__c.field-meta.xml
<CustomField>
    <fullName>Distance_Driving_Route_km__c</fullName>
    <description>Actual driving route distance between the Delivery Site and the Default Agency (in km). Populated by OpenRouteService API integration for accurate transport cost calculations. This is the real road distance, not straight-line.</description>
    <inlineHelpText>Actual driving distance calculated by OpenRouteService API (real road distance, not straight-line).</inlineHelpText>
    <label>Distance Driving Route (km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>