force-app/main/default/objects/Opportunity/fields/Duration_Trip_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Trip_Minutes__c</fullName>
    <description>Estimated trip duration between the Delivery Site and the Default Agency (in minutes). Populated by OpenRouteService API integration. This is the real road time estimate.</description>
    <inlineHelpText>Estimated trip duration calculated by OpenRouteService API (in minutes).</inlineHelpText>
    <label>Duration Trip (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>