force-app/main/default/objects/Opportunity/fields/Is_Transport_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Transport_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Master switch controlling whether transport trips must be generated for this opportunity. When unchecked, the engine skips all trip creation and cost calculation regardless of line item dates.</description>
    <inlineHelpText>Check this box if physical transport (delivery and/or pickup) is required for this opportunity. When unchecked, no trips or transport costs will be generated, even if line items have delivery or pickup dates.</inlineHelpText>
    <label>Is Transport Required</label>
    <type>Checkbox</type>
</CustomField>