force-app/main/default/objects/Opportunity/fields/Offer_Type__c.field-meta.xml
<CustomField>
    <fullName>Offer_Type__c</fullName>
    <label>Offer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Rental_and_Services</fullName>
                <label>Rental and Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>