force-app/main/default/objects/Opportunity/fields/Total_Transport_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Transport_Cost__c</fullName>
    <description>Aggregated cost of all non-cancelled trips associated with this opportunity. Automatically calculated via roll-up summary from the Trip master-detail relationship.</description>
    <inlineHelpText>Total cost of all active trips for this opportunity. Cancelled trips are excluded. This value updates automatically.</inlineHelpText>
    <label>Total Transport Cost</label>
    <summarizedField>Trip__c.Final_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Trip__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Trip__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>