force-app/main/default/objects/Opportunity/fields/Transport_Urgency__c.field-meta.xml
<CustomField>
    <fullName>Transport_Urgency__c</fullName>
    <description>Urgency level of the transport for this opportunity. Evaluated by the supplement engine against conditional surcharge rules — Express or Urgent values may trigger additional surcharges as defined in the active Supplement configuration records.</description>
    <inlineHelpText>Select the transport urgency level for this opportunity. &quot;Express&quot; or &quot;Urgent&quot; may automatically trigger additional surcharges. Defaults to &quot;Standard&quot; if no urgency applies.</inlineHelpText>
    <label>Transport Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Express</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>