force-app/main/default/objects/Opportunity/fields/Trip_Direction_Mode__c.field-meta.xml
<CustomField>
    <fullName>Trip_Direction_Mode__c</fullName>
    <description>For rental opportunities, controls whether trip calculation generates Delivery trips only, Pickup trips only, or Both. Read by TripService.calculateTripsWithCPQItems and persisted from the CPQ Logistics step.</description>
    <inlineHelpText>For rental offers, choose whether to generate Delivery trips, Pickup (return) trips, or Both. Defaults to Delivery.</inlineHelpText>
    <label>Trip Direction Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
                <default>true</default>
                <label>Delivery</label>
            </value>
            <value>
                <fullName>Pickup</fullName>
            </value>
            <value>
                <fullName>Delivery_Pickup</fullName>
                <label>Delivery &amp; Pickup</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>