force-app/main/default/objects/Opportunity/fields/Win_Count__c.field-meta.xml
<CustomField>
    <fullName>Win_Count__c</fullName>
    <description>Helper for Win Rate reporting: 1 when the opportunity is won, else 0.</description>
    <formula>IF(IsWon, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Win Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>