force-app/main/default/objects/Opportunity/fields/Win_Rate_Pct__c.field-meta.xml
<CustomField>
    <fullName>Win_Rate_Pct__c</fullName>
    <description>Helper for Win Rate KPI: 100 when won, else 0. Average across closed opps = win rate %.</description>
    <formula>IF(IsWon, 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Win Rate %</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>