force-app/main/default/objects/Opportunity/validationRules/Default_Agency_Required_When_Transport.validationRule-meta.xml
<ValidationRule>
    <fullName>Default_Agency_Required_When_Transport</fullName>
    <active>true</active>
    <description>Enforces that Default_Agency__c is populated when Is_Transport_Required__c is enabled, ensuring no transport can be initiated without a defined departure agency.</description>
    <errorConditionFormula>AND(Is_Transport_Required__c, ISBLANK(Default_Agency__c))</errorConditionFormula>
    <errorDisplayField>Default_Agency__c</errorDisplayField>
    <errorMessage>Default Agency is required when transport is required. Please select a default agency or uncheck &quot;Is Transport Required&quot;.</errorMessage>
</ValidationRule>