force-app/main/default/objects/Opportunity/validationRules/Urgency_Required_When_Transport.validationRule-meta.xml
<ValidationRule>
    <fullName>Urgency_Required_When_Transport</fullName>
    <active>true</active>
    <description>Enforces that Transport_Urgency__c is populated when Is_Transport_Required__c is enabled, ensuring every transport request carries an explicit priority level before progression.</description>
    <errorConditionFormula>AND(Is_Transport_Required__c, ISPICKVAL(Transport_Urgency__c, &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Transport_Urgency__c</errorDisplayField>
    <errorMessage>Transport Urgency must be set when transport is required. Select Standard, Express, or Urgent.</errorMessage>
</ValidationRule>