force-app/main/default/objects/Opportunity/validationRules/Valid_Default_Agency_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Default_Agency_Type</fullName>
    <active>true</active>
    <description>The Default Agency must have a Location Type of &quot;Warehouse&quot;.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Default_Agency__c)),
    TEXT(Default_Agency__r.LocationType) &lt;&gt; &quot;Warehouse&quot;
)</errorConditionFormula>
    <errorDisplayField>Default_Agency__c</errorDisplayField>
    <errorMessage>The Default Agency must be a location of type &quot;Warehouse&quot;.</errorMessage>
</ValidationRule>