force-app/main/default/objects/Opportunity/validationRules/Valid_Delivery_Site_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Delivery_Site_Type</fullName>
    <active>true</active>
    <description>The Delivery Site must have a Location Type of &quot;Site&quot;.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Delivery_Site__c)),
    TEXT(Delivery_Site__r.LocationType) &lt;&gt; &quot;Site&quot;
)</errorConditionFormula>
    <errorDisplayField>Delivery_Site__c</errorDisplayField>
    <errorMessage>The Delivery Site must be a location of type &quot;Site&quot;.</errorMessage>
</ValidationRule>